# guppylm-nla

./: .gitignore  README.md  pyproject.toml
data/: MANIFEST.json  MANIFEST_phase2.json
docs/: runpod.md
nla/: __init__.py  _substrate.py  ar.py  av.py  data_phase3.py  extract.py  fve.py  hooks.py  load.py  qwen.py  splits.py  teacher.py  train_warmstart.py
notebooks/: phase3_colab.ipynb
notes/: phase1.md  phase2.md  phase3.md
runpod/: README.md  full.sh  setup.sh  smoke.sh
scripts/: 00_fetch_substrate.sh  01_extract_activations.py  02_teacher_summaries.py  03_warmstart.py  debug_nan_trace.py  debug_step_trace.py  diagnose_av.py  diagnose_floor.py  probe_substrate.py  runpod_full.sh  runpod_setup.sh  runpod_smoke.sh  runpod_sync.sh
tests/: test_av_ar.py  test_extract.py  test_teacher.py
