[project]
name = "guppylm-nla"
version = "0.1.0"
description = "Phase 1 of NLA-on-GuppyLM POC: activation extraction"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "tokenizers>=0.19",
    "numpy>=1.24",
    "tqdm>=4.65",
    "huggingface_hub>=0.20",
    "pyarrow>=14",
    "openai>=1.40",
    "transformers>=4.43",
    "accelerate>=0.30",
    "peft>=0.12",
    "datasets>=2.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]
colab = ["bitsandbytes>=0.43"]  # CUDA-only; install via pip in the Colab notebook

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
